# openai-agent-pocs

./: .env-example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
agent_pocs/: __init__.py
comms/: agent_comparison.md  blog_post.md
data/: expected_output_schema.yaml  project_snapshot.json  sample_input.txt
project/: memory.yaml
prompts/: deploy.yaml  dev.yaml  docs.yaml  dor_refiner.yaml  evaluator.yaml  po_planner.yaml  po_review.yaml  test.yaml  user_story_acceptance.yaml  user_story_dor_review.yaml  user_story_estimate.yaml  user_story_functionality.yaml  user_story_impact.yaml  user_story_tech.yaml  user_story_ux.yaml
resources/: delivery_standards.md  dor_schema.yaml  tech_context.json
scripts/: deliver_feature.py  generate_user_stories.py
task_guides/: task_000_project_plan.md  task_001_poc_definitions.md  task_002_sdk_features_mapping.md  task_101_delivery_agents.md  task_101b_delivery_agents_patch.md  task_101c_delivery_validation.md  task_101d_user_story_agent.md  task_101e_user_story_sdk_refactor.md  task_101f_user_story_test_prep.md  task_101g_user_story_handoff_graph.md  task_101h_fix_sdk_imports.md  task_102_run_coach.md  task_103_navigator_agent.md  task_104_user_story_restart.md  task_104b_user_story_trace_writer.md  task_104c_user_story_trace_flow.md  task_104d_user_story_ui_and_hosting.md  task_105_run_coach_pipeline.md  task_105b_run_coach_enhancements.md  task_106_trip_planner_pipeline.md  task_106b_trip_guardrails.md  task_107_guardrails_userstory_runcoach.md  task_108_mcp_filesystem_impact.md  (+2 more)
tools/: test_tool.py  (+4 more)
(+128 files in other folders)
